<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".VolumeControlActivity" >

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/notificationBar"
        android:layout_alignLeft="@+id/systemBar"
        android:text="notification" />

    <SeekBar
        android:id="@+id/notificationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/systemBar"
        android:layout_alignLeft="@+id/alarmBar"
        android:text="system" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/alarmBar"
        android:layout_alignLeft="@+id/musicBar"
        android:text="alarm" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/allBar"
        android:layout_alignLeft="@+id/button4"
        android:text="all" />

    <SeekBar
        android:id="@+id/systemBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView03"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:id="@+id/alarmBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView02"
        android:layout_alignLeft="@+id/systemBar" />

    <SeekBar
        android:id="@+id/musicBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView01"
        android:layout_alignLeft="@+id/alarmBar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ringBar"
        android:layout_alignLeft="@+id/textView3"
        android:text="ring" />

    <SeekBar
        android:id="@+id/allBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/ringBar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/musicBar"
        android:layout_alignLeft="@+id/textView4"
        android:text="music" />

    <SeekBar
        android:id="@+id/ringBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/musicBar" />

    <Button
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_marginLeft="34dp"
        android:layout_toRightOf="@+id/TextView03"
        android:onClick="silent"
        android:text="@string/Silent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignRight="@+id/allBar"
        android:layout_marginRight="24dp"
        android:onClick="vibrate"
        android:text="@string/Vibrate" />

    <Button
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/allBar"
        android:layout_marginBottom="11dp"
        android:onClick="ring"
        android:text="@string/Ring" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button2"
        android:text="@string/audio"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button4"
        android:layout_marginBottom="13dp"
        android:text="@string/Status"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>